--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,8 @@
 .profile {
-    margin: 40px auto 0 auto;
-    max-width: 880px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    margin: 40px auto 50px auto;
+    justify-content: space-between;
+    max-width: 880px;
 }
