--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,15 @@
     max-width: 880px;
     margin: 66px auto 60px auto;
 }
+
+@media screen and (max-width: 880px) {
+    .footer {
+        margin-left: 27px;
+    }
+  }
+
+@media screen and (max-width: 324px) {
+    .footer {
+        margin: 48px auto 36px 27px;
+    }
+  }
