--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
     max-width: 142px;
     margin-bottom: 41px;
 }
+
+@media screen and (max-width: 880px) {
+    .header__logo {
+      margin-left: 27px;
+    }
+  }
+
