--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -2,12 +2,30 @@
     display: flex;
     align-self: center;
     background-image: url(../../../images/profile/Add-Button.svg);
+    background-repeat: no-repeat;
     border: 0;
     background-color: black;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
+    padding: 0;
 }
 
 .profile__add-btn:hover {
     cursor: pointer;
+    background-image: url(../../../images/profile/Add-Button-Hover.svg);
 }
+
+@media screen and (max-width: 880px) {
+    .profile__add-btn {
+      margin-right: 27px;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    .profile__add-btn {
+        margin-top: 36px;
+        margin-right: 0;
+        background-image: url(../../../images/profile/Add-Button-Mob.svg);
+        min-width: 282px;
+    }
+  }
