--- a/blocks/profile/__content-wrapper/profile__content-wrapper.css
+++ b/blocks/profile/__content-wrapper/profile__content-wrapper.css
@@ -3,3 +3,10 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 768px) {
+    .profile__content-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+  }
