--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,11 +1,24 @@
 .profile__edit-btn {
     background-image: url(../../../images/profile/Edit-Button.svg);
     background-color: black;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+    border: 0;
     width: 24px;
     height: 24px;
-    border: 0;
+    padding: 0;
 }
 
 .profile__edit-btn:hover {
     cursor: pointer;
+    background-image: url(../../../images/profile/Edit-Button-Hover.svg);
 }
+
+@media screen and (max-width: 324px) {
+    .profile__edit-btn {
+        background-image: url(../../../images/profile/Edit-Button-Mob.svg);
+        background-size: 18px 18px;
+        width: 18px;
+        height: 18px;
+    }
+  }
