--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -2,3 +2,16 @@
     max-width: 120px;
     max-height: 120px;
 }
+
+@media screen and (max-width: 880px) {
+    .profile__image {
+      margin-left: 27px;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    .profile__image {
+      margin-left: 0;
+      margin-bottom: 26px;
+    }
+  }
