--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,10 @@
     margin-left: 30px;
     justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+    .profile__info {
+      margin-left: 0;
+      text-align: center;
+    }
+  }
