--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,3 +6,11 @@
     line-height: 48px;
     margin: 0 0 16px 0;
 }
+
+@media screen and (max-width: 324px) {
+    .profile__name {
+        font-weight: 500;
+        font-size: 27px;
+        line-height: 33px;
+    }
+  }
