--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,9 @@
     justify-content: space-between;
     max-width: 880px;
 }
+
+@media screen and (max-width: 768px) {
+    .profile{
+        flex-direction: column;
+    }
+  }
