feat: сделать лендинг по брифу

--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -11,3 +11,8 @@
     background-image: url(../../../images/card/Like-hover.svg);
 }
 
+.card__like-btn:focus {
+    background-image: url(../../../images/card/Like-active.svg);
+}
+
+
