--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -12,7 +12,7 @@
 
 .profile__add-btn:hover {
     cursor: pointer;
-    background-image: url(../../../images/profile/Add-Button-Hover.svg);
+    opacity: .8;
 }
 
 @media screen and (max-width: 880px) {
