fix: title overwriting added

--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -5,4 +5,7 @@
     max-width: 246px;
     max-height: 23px;
     margin: 25px auto 28px 21px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
