--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
     display: flex;
+    margin: 0 auto;
     max-width: 880px;
     margin: 66px auto 60px auto;
 }
@@ -12,6 +13,6 @@
 
 @media screen and (max-width: 324px) {
     .footer {
-        margin: 48px auto 36px 27px;
+        /* margin: 48px auto 36px 19px; */
     }
   }
