--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,9 +3,18 @@
     margin-bottom: 41px;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 900px) {
     .header__logo {
       margin-left: 27px;
+    }
+  }
+
+@media screen and (max-width: 324px) {
+    .header__logo {
+      margin-left: 27px;
+      width: 103.24px;
+      height: 24.4px;
+      margin-bottom: 31.6px;
     }
   }
 
