--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,13 @@
     margin: 45px auto 0 auto ;
     display: flex;
     background-color: black;
-    display: flex;
     flex-direction: column;
+    border-bottom: 1px solid #545454;
+    
+}
+
+@media screen and (max-width: 324px) {
+    .header {
+        margin: 28px auto 0 auto ;
+    }
 }
