--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -15,7 +15,7 @@
 }
 
 .popup__close:hover {
-    opacity: .5;
+    opacity: .6;
     cursor: pointer;
 }
 
@@ -25,9 +25,7 @@
         order: -1;
         margin-left: 250px;
         margin-bottom: 16px;
-        background-image: url(../../../images/profile/popup/popup-close-mob.svg);
-        min-width: 20px;
-        min-height: 20px;
+        background-size: 20px 20px;
         right: 0;
     }
 }
