--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,16 +5,16 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    width: 430px;
-    height: 330px;
+    /* width: 430px;
+    min-height: 330px; */
     position: relative;
     opacity: 100%;
     z-index: 1;
 }
 
-@media screen and (max-width: 520px) {
+/* @media screen and (max-width: 520px) {
     .popup__form {
         max-width: 282px;
-        max-height: 322px;
+        min-height: 322px;
     }
-}
+} */
