--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,12 +1,10 @@
 .popup__name {
-    background-image: url(../../../images/profile/popup/input-line.svg);
-    background-repeat: no-repeat;
-    background-position: bottom;
     margin: 54px 0 0 0;
     padding: 0;
     min-width: 358px;
     min-height: 27px;
-    border: 0px;
+    border: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
     font-style: normal;
     font-weight: 400;
@@ -14,8 +12,13 @@
     line-height: 17px;
 }
 
+.popup__name:nth-child(4) {
+    margin: 30px 0 0 0;
+}
+
 @media screen and (max-width: 520px) {
     .popup__name {
         min-width: 238px;       
     }
 }
+
