--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,7 +2,7 @@
     background-image: url(../../../images/profile/popup/input-submit.svg);
     background-position: center;
     background-repeat: no-repeat;
-    margin: 48px 0 0 0;
+    margin: 48px 0 37px 0;
     padding: 0;
     min-width: 358px;
     height: 50px;
@@ -18,6 +18,14 @@
 @media screen and (max-width: 520px) {
     .popup__submit {
         min-width: 238px; 
+        margin-bottom: 25px;
     }
 }
+
+@media screen and (max-width: 324px) {
+    .popup__submit {
+        margin-top: 45px
+    }
+}
+
 
