--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,13 +4,16 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 34px 0 0 36px;
+    padding: 34px 64px 0 36px;
+    margin: 0;
+    min-width: 330px;
 }
 
 @media screen and (max-width: 520px) {
     .popup__title {
+        min-width: 238px;
         font-size: 18px;
         line-height: 22px;
-        margin: 25px 0 0 22px;
+        padding: 25px 22px 0 22px;
     }
 }
