--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -2,8 +2,11 @@
     display: flex;
     align-self: center;
     background-image: url(../../../images/profile/Add-Button.svg);
+    background-position: center;
     background-repeat: no-repeat;
     border: 0;
+    border: 2px solid white;
+    border-radius: 2px;
     background-color: black;
     min-width: 150px;
     height: 50px;
@@ -15,17 +18,16 @@
     opacity: .8;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 900px) {
     .profile__add-btn {
       margin-right: 27px;
     }
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
     .profile__add-btn {
         margin-top: 36px;
         margin-right: 0;
-        background-image: url(../../../images/profile/Add-Button-Mob.svg);
         min-width: 282px;
     }
   }
