--- a/blocks/profile/__content-wrapper/profile__content-wrapper.css
+++ b/blocks/profile/__content-wrapper/profile__content-wrapper.css
@@ -1,12 +1,14 @@
 .profile__content-wrapper {
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
     .profile__content-wrapper {
         flex-direction: column;
         align-items: center;
+        margin: 0 auto;
     }
   }
