--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,15 +1,20 @@
 .profile__image {
-    max-width: 120px;
-    max-height: 120px;
+    background-image: url(../../../images/profile/Avatar.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: contain;
+    min-width: 120px;
+    min-height: 120px;
+    border-radius: 50%;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 900px) {
     .profile__image {
       margin-left: 27px;
     }
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
     .profile__image {
       margin-left: 0;
       margin-bottom: 26px;
